# agntrick-whatsapp

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-20-code-review-fixes.md
docs/superpowers/specs/: 2026-03-19-conversation-history-design.md  2026-03-20-code-review-fixes-design.md  2026-03-21-agntrick-toolbox-design.md
scripts/: release.sh
src/agntrick_whatsapp/: __init__.py  base.py  channel.py  channel_api.py  channel_bridge.py  cli.py  commands.py  config.py  constants.py  conversation.py  router.py  runner_config.py  storage.py  transcriber.py
src/agntrick_whatsapp/storage/: __init__.py  database.py  models.py  scheduler.py
src/agntrick_whatsapp/storage/repositories/: __init__.py  note_repository.py  task_repository.py
tests/: __init__.py  test_base.py  test_channel.py  test_channel_api.py  test_channel_bridge.py  test_cli.py  test_commands.py  test_config.py  test_constants.py  test_conversation.py  test_init.py  test_router.py  test_runner_config.py  test_scheduler.py  test_storage_integration.py  test_task_repository.py  test_transcriber.py
